<package>
  <name>robohow_common_msgs</name>
  <version>0.1.0</version>
  <description>
    Messages for specifying movement constraints, and reporting their state.
  </description>
  <author>Georg Bartels, Francois Keith, Ingo Kresse, Lucia Pais, Moritz Tenorth</author>
  <maintainer email="nobody@tobefilled.fr">Erwin Aertbelien</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>

